@@ -1793,14 +1793,93 @@ name|DESCRIPTION
 condition|)
 block|{
 comment|// make sure we don't interpret any tag while in description tag
-name|buffer
+name|getBuffer
+argument_list|()
 operator|.
 name|append
 argument_list|(
 literal|"<"
-operator|+
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|qName
-operator|+
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|attributes
+operator|.
+name|getLength
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|getBuffer
+argument_list|()
+operator|.
+name|append
+argument_list|(
+literal|" "
+argument_list|)
+expr_stmt|;
+name|getBuffer
+argument_list|()
+operator|.
+name|append
+argument_list|(
+name|attributes
+operator|.
+name|getQName
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|getBuffer
+argument_list|()
+operator|.
+name|append
+argument_list|(
+literal|"=\""
+argument_list|)
+expr_stmt|;
+name|getBuffer
+argument_list|()
+operator|.
+name|append
+argument_list|(
+name|attributes
+operator|.
+name|getValue
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|getBuffer
+argument_list|()
+operator|.
+name|append
+argument_list|(
+literal|"\""
+argument_list|)
+expr_stmt|;
+block|}
+name|getBuffer
+argument_list|()
+operator|.
+name|append
+argument_list|(
 literal|">"
 argument_list|)
 expr_stmt|;
